--- a/src/index.css
+++ b/src/index.css
@@ -205,9 +205,9 @@
 
 #magic {
 
-  position: fixed;
+  position: static;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: block;
   top: 0;
   left: 0;
