Optimized and Bugfixed Magic
Made it dynamic based on screen size and if user is viewing the magic

--- a/src/index.css
+++ b/src/index.css
@@ -204,7 +204,6 @@
 }
 
 #magic {
-
   position: static;
   width: 100%;
   height: 100%;
@@ -213,3 +212,19 @@
   left: 0;
   z-index: -9999;
 }
+
+#magic[disabled] {
+  /* display: none; */
+  opacity: 0;
+}
+
+#magicCover {
+  position: static;
+  width: 100%;
+  height: 100%;
+  display: block;
+  top: 0;
+  left: 0;
+  z-index: -9999;
+}
+
