--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,12 @@
   background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
 }
 
+/* .blue-white-gradient {
+  background: #0077b5;
+  background: -webkit-linear-gradient(left, #0077b5 0%, #0077b5 50%, #ffffff 50%, #ffffff 100%);
+  background: linear-gradient(to right, #0077b5 0%, #0077b5 50%, #ffffff 50%, #ffffff 100%);
+} */
+
 .orange-text-gradient {
   background: #f12711; /* fallback for old browsers */
   background: -webkit-linear-gradient(
